--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@
     box-sizing: border-box;
 }
 
+
+/* rating component styles  */
+
 body {
     display: flex;
     flex-direction: column;
@@ -44,14 +47,14 @@ body {
     margin-bottom: 20px;
 }
 
-.rating-card-title {
+h1 {
     font-size: 2rem;
     color: var(--color-white);
     font-weight: 700;
     margin-bottom: 15px;
 }
 
-.rating-card-description {
+p {
     font-size: 1rem;
     color: var(--color-medium-gray);
     font-weight: 400;
@@ -148,4 +151,27 @@ body {
 }
 .attribution a { 
     color: hsl(228, 45%, 44%); 
+}
+
+/* thank you return card only styles  */
+
+.thank-you {
+    text-align: center;
+}
+
+.thank-you .thank-you-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+}
+
+.thank-you .result {
+    display: inline-block;
+    background-color: var(--color-dark-blue);
+    padding: 5px 15px;
+    border-radius: 20px;
+    color: var(--color-primary);
+    font-weight: 400;
+    margin-bottom: 20px;
 }
